Fix windows build (#1302)